DcmdMBeanPermissionsTest.java and SystemDumpMapTest.java fail with assert(_stack_base != nullptr) failed: Sanity check

XMLWordPrintable

    • b03
    • x86_64
    • windows

      The following test failed in the JDK24 CI:

      com/sun/management/DiagnosticCommandMBean/DcmdMBeanPermissionsTest.java

      Here's a snippet from the log file:

      #section:main
      ----------messages:(7/400)----------
      command: main -Djava.security.manager=allow DcmdMBeanPermissionsTest
      reason: User specified action: run main/othervm -Djava.security.manager=allow DcmdMBeanPermissionsTest
      started: Wed Sep 18 16:20:51 UTC 2024
      Mode: othervm [/othervm specified]
      Additional options from @modules: --add-modules java.logging,java.management
      finished: Wed Sep 18 16:21:06 UTC 2024
      elapsed time (seconds): 14.671
      ----------configuration:(3/59)----------
      Boot Layer
        add modules: java.logging java.management

      ----------System.out:(41/1593)*----------
      Testing compilerCodeHeapAnalytics
      Testing compilerCodecache
      Testing compilerCodelist
      Testing compilerDirectivesAdd
      Testing compilerDirectivesClear
      Testing compilerDirectivesPrint
      Testing compilerDirectivesRemove
      Testing compilerMemory
      Testing compilerQueue
      Testing gcClassHistogram
      Testing gcFinalizerInfo
      Testing gcHeapInfo
      Testing gcRun
      Testing gcRunFinalization
      Testing help
      Testing jfrCheck
      Testing jfrConfigure
      Testing jfrDump
      Testing jfrStart
      Testing jfrStop
      Testing jfrView
      Testing jvmtiAgentLoad
      Testing jvmtiDataDump
      Testing systemDumpMap
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (c:\\sb\\prod\\1726663901\\workspace\\open\\src\\hotspot\\share\\runtime/thread.hpp:535), pid=44680, tid=20508
      # assert(_stack_base != nullptr) failed: Sanity check
      #
      # JRE version: Java(TM) SE Runtime Environment (24.0+16) (fastdebug build 24-ea+16-1777)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-ea+16-1777, mixed mode, sharing, tiered, compressed class ptrs, z gc, windows-amd64)
      # Core dump will be written. Default location: C:\\sb\\prod\\1726676244\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_management\\scratch\\0\\hs_err_pid44680.mdmp
      #
      # An error report file with more information is saved as:
      # C:\\sb\\prod\\1726676244\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_management\\scratch\\0\\hs_err_pid44680.log
      [4.628s][warning][os] Loading hsdis library failed
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ----------System.err:(6/712)----------
      Java HotSpot(TM) 64-Bit Server VM warning: Option ZGenerational was deprecated in version 23.0 and will likely be removed in a future release.
      Java HotSpot(TM) 64-Bit Server VM warning: Non-generational ZGC is deprecated.
      WARNING: A terminally deprecated method in java.lang.System has been called
      WARNING: System::setSecurityManager has been called by DcmdMBeanPermissionsTest (file:/C:/sb/prod/1726676244/testoutput/test-support/jtreg_open_test_jdk_jdk_management/classes/1/com/sun/management/DiagnosticCommandMBean/DcmdMBeanPermissionsTest.d/)
      WARNING: Please consider reporting this to the maintainers of DcmdMBeanPermissionsTest
      WARNING: System::setSecurityManager will be removed in a future release
      ----------rerun:(47/6059)*----------

      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x00000273c16ad670): JavaThread "MainThread" [_thread_in_vm, id=20508, stack(0x000000de1e300000,0x000000de1e400000) (1024K)] _threads_hazard_ptr=0x00000273c1441b40, _nested_threads_hazard_ptr_cnt=0

      Stack: [0x000000de1e300000,0x000000de1e400000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xce9d41] os::win32::platform_print_native_stack+0x101 (os_windows_x86.cpp:235)
      V [jvm.dll+0xfaeeeb] VMError::report+0x149b (vmError.cpp:1011)
      V [jvm.dll+0xfb158d] VMError::report_and_die+0x80d (vmError.cpp:1846)
      V [jvm.dll+0xfb1c84] VMError::report_and_die+0x64 (vmError.cpp:1611)
      V [jvm.dll+0x57dccb] report_vm_error+0x5b (debug.cpp:193)
      V [jvm.dll+0xc08f66] vma_touches_thread_stack+0x86 (memMapPrinter.cpp:175)
      V [jvm.dll+0xc08cdb] print_thread_details_for_supposed_stack_address+0x8b (memMapPrinter.cpp:217)
      V [jvm.dll+0xc08ac4] MappingPrintSession::print_nmt_info_for_region+0x1f4 (memMapPrinter.cpp:260)
      V [jvm.dll+0xc09540] MemMapPrinter::pd_print_all_mappings+0x4c0 (memMapPrinter_windows.cpp:244)
      V [jvm.dll+0xc086ce] MemMapPrinter::print_all_mappings+0x7e (memMapPrinter.cpp:282)
      V [jvm.dll+0x60cbe7] SystemDumpMapDCmd::execute+0x67 (diagnosticCommand.cpp:1211)
      V [jvm.dll+0x60ffe5] DCmd::parse_and_execute+0x505 (diagnosticFramework.cpp:416)
      V [jvm.dll+0xbed5ad] jmm_ExecuteDiagnosticCommand+0x15d (management.cpp:2082)
      C 0x00000273dee17055 (no source info available)

      The last pc belongs to native nmethod (printed below).
      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      J 1009 com.sun.management.internal.DiagnosticCommandImpl.executeDiagnosticCommand(Ljava/lang/String;)Ljava/lang/String; jdk.management@24-ea (0 bytes) @ 0x00000273dee1701c [0x00000273dee16fa0+0x000000000000007c]
      j com.sun.management.internal.DiagnosticCommandImpl$Wrapper.execute([Ljava/lang/String;)Ljava/lang/String;+35 jdk.management@24-ea
      j com.sun.management.internal.DiagnosticCommandImpl.invoke(Ljava/lang/String;[Ljava/lang/Object;[Ljava/lang/String;)Ljava/lang/Object;+134 jdk.management@24-ea
      j com.sun.jmx.interceptor.DefaultMBeanServerInterceptor.invoke(Ljavax/management/ObjectName;Ljava/lang/String;[Ljava/lang/Object;[Ljava/lang/String;)Ljava/lang/Object;+29 java.management@24-ea
      j com.sun.jmx.mbeanserver.JmxMBeanServer.invoke(Ljavax/management/ObjectName;Ljava/lang/String;[Ljava/lang/Object;[Ljava/lang/String;)Ljava/lang/Object;+13 java.management@24-ea
      j DcmdMBeanPermissionsTest.invokeOperation(Ljavax/management/MBeanServer;Ljavax/management/ObjectName;Ljavax/management/MBeanOperationInfo;)Z+53
      j DcmdMBeanPermissionsTest.testOperation(Ljavax/management/MBeanServer;LDcmdMBeanPermissionsTest$CustomSecurityManager;Ljavax/management/ObjectName;Ljavax/management/MBeanOperationInfo;)V+127
      j DcmdMBeanPermissionsTest.main([Ljava/lang/String;)V+241
      j java.lang.invoke.LambdaForm$DMH+0x00000273c24083e0.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V+10 java.base@24-ea
      j java.lang.invoke.LambdaForm$MH+0x00000273c240ac10.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+33 java.base@24-ea
      j java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+20 java.base@24-ea
      j jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+55 java.base@24-ea
      j jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+23 java.base@24-ea
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+102 java.base@24-ea
      j com.sun.javatest.regtest.agent.MainWrapper$MainTask.run()V+134
      j java.lang.Thread.runWith(Ljava/lang/Object;Ljava/lang/Runnable;)V+5 java.base@24-ea
      j java.lang.Thread.run()V+19 java.base@24-ea
      v ~StubRoutines::call_stub 0x00000273de83104f
      Lock stack of current Java thread (top to bottom):


      Compiled method (n/a) 4627 1009 n 0 com.sun.management.internal.DiagnosticCommandImpl::executeDiagnosticCommand (native)
       total in heap [0x00000273dee16e88,0x00000273dee17300] = 1144
       relocation [0x00000273dee16f70,0x00000273dee16f90] = 32
       main code [0x00000273dee16fa0,0x00000273dee172ff] = 863
       stub code [0x00000273dee172ff,0x00000273dee17300] = 1

      Since the crash appears to be happening in the DCmd implementation
      I'm starting this bug off in core-svc/tools for initial triage.

            Assignee:
            Simon Tooke
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: