8340401: test for thread with uninitialized stack