src/hotspot/share/nmt/memMapPrinter.cpp
@@ -172,8 +172,6 @@ static bool vma_touches_thread_stack(const void* from, const void* to, const Thr
   // Very rarely however is a VMA backing a thread stack folded together with another adjacent VMA by the
   // kernel. That can happen, e.g., for non-java threads that don't have guard pages.
   // Therefore we go for the simplest way here and check for intersection between VMA and thread stack.
-  // If the stack size is zero (i.e. no stack assigned yet), then return false.
-  if (t->stack_size() == 0) return false;
   return range_intersects(from, to, (const void*)t->stack_end(), (const void*)t->stack_base());
 }
 
@@ -211,7 +209,7 @@ static void print_thread_details_for_supposed_stack_address(const void* from, co
   ResourceMark rm;
 
 #define HANDLE_THREAD(T)                                                        \
-  if (T != nullptr && vma_touches_thread_stack(from, to, T)) {                  \
+  if (T != nullptr && T->stack_size() != 0 && vma_touches_thread_stack(from, to, T)) { \
     print_thread_details((uintx)(T->osthread()->thread_id()), T->name(), st);   \
     return;                                                                     \
   }
